--- a/index.html
+++ b/index.html
@@ -1592,9 +1592,31 @@
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body p-0">
-                    <!-- O container do mapa precisa de uma altura definida -->
-                    <div id="map-container" style="height: 75vh; width: 100%;"></div>
+                <div class="modal-body p-0 d-flex" style="height: 75vh;">
+                    <!-- SIDEBAR DE EDIÇÃO DE ROTA (DARK MODE) -->
+                    <div id="route-sidebar" class="bg-dark text-white border-end border-secondary"
+                        style="width: 350px; display: flex; flex-direction: column;">
+                        <div
+                            class="p-3 border-bottom border-secondary bg-dark d-flex justify-content-between align-items-center">
+                            <h6 class="mb-0 fw-bold text-white"><i class="bi bi-list-ol me-2"></i>Sequência</h6>
+                            <small class="text-secondary">Arraste para ordenar</small>
+                        </div>
+                        <div id="route-stops-list"
+                            class="list-group list-group-flush overflow-auto flex-grow-1 custom-scrollbar">
+                            <!-- Items serão inseridos aqui via JS -->
+                        </div>
+                        <div class="p-2 border-top border-secondary bg-dark d-flex gap-2">
+                            <button class="btn btn-outline-info w-50 btn-sm" onclick="optimizeRouteSequence()">
+                                <i class="bi bi-magic me-2"></i>Otimizar
+                            </button>
+                            <button class="btn btn-warning w-50 btn-sm" onclick="applyRouteReorder()">
+                                <i class="bi bi-arrow-repeat me-2"></i>Recalcular
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- CONTAINER DO MAPA -->
+                    <div id="map-container" style="flex: 1; height: 100%; position: relative;"></div>
                 </div>
                 <div class="modal-footer">
                     <div class="me-auto d-flex align-items-center gap-3">
