--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="js/toll_logic.js"></script> <!-- Carregar lógica de pedágios ANTES do simulador -->
+    <script src="js/route_simulator.js"></script> <!-- Script do Novo Simulador -->
 
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -883,6 +885,15 @@
                 <span>Tabela Fretes</span>
             </a>
 
+            <!-- LINK SIMULADOR DE ROTAS (PREMIUM) -->
+            <a href="#simulator-view" class="sidebar-link"
+                onclick="activateView('simulator-view', this); if (window.initSimulatorMap) window.initSimulatorMap();">
+                <i class="bi bi-pin-map-fill" style="color: #3b82f6;"></i>
+                <span>Simulador Rotas</span>
+                <span class="badge bg-primary ms-auto"
+                    style="font-size: 0.6rem; box-shadow: 0 0 10px rgba(59, 130, 246, 0.5);">NOVO</span>
+            </a>
+
             <!-- Dropdown Logic for Sidebar (Basic Collapse) -->
             <div class="sidebar-link-group">
                 <a href="#" class="sidebar-link" data-bs-toggle="collapse" data-bs-target="#analises-collapse">
@@ -922,7 +933,7 @@
                 <div class="px-3 mb-3">
                     <button id="processarBtn" class="btn btn-primary w-100 p-2 position-relative" onclick="processar()"
                         disabled style="overflow: hidden;">
-                        <i class="bi bi-lightning-fill fs-6"></i>
+                        <i class="bi bi-signpost-split-fill fs-6"></i>
                         <span class="d-inline-block small ms-1 fw-bold">PROCESSAR</span>
                     </button>
                     <!-- Status Text Compacted -->
@@ -1552,6 +1563,194 @@
             </div>
         </div>
 
+        <!-- VIEW SIMULADOR DE ROTAS -->
+        <div id="simulator-view" class="main-view container-fluid p-4" style="display: none;">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <div>
+                    <h2 class="fw-bold mb-1 gradient-text"
+                        style="background: linear-gradient(90deg, #fff, #3b82f6); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;">
+                        <i class="bi bi-pin-map-fill me-2" style="-webkit-text-fill-color: #3b82f6;"></i>Simulador de
+                        Rotas
+                    </h2>
+                    <p class="text-muted mb-0">Simule trajetos e calcule custos de pedágio sem necessidade de carga.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <!-- Painel de Controle -->
+                <div class="col-lg-4 mb-4">
+                    <div class="kpi-card-modern h-100">
+                        <div class="kpi-label"><i class="bi bi-sliders"></i>Configuração da Rota</div>
+
+                        <div class="mb-4">
+                            <label class="form-label text-secondary small text-uppercase fw-bold">Rota</label>
+                            <div id="sim-stops-container" class="position-relative">
+                                <!-- Linha Conectora Vertical -->
+                                <div class="position-absolute top-0 bottom-0 start-0 ms-3 border-start border-2 border-secondary"
+                                    style="height: 100%; z-index: 0; opacity: 0.3;"></div>
+
+                                <!-- Origem -->
+                                <div class="d-flex align-items-center mb-2 position-relative stop-row" data-index="0">
+                                    <div class="me-3 bg-dark z-1 d-flex flex-column align-items-center"
+                                        style="width: 24px;">
+                                        <i class="bi bi-circle-fill text-primary" style="font-size: 10px;"></i>
+                                    </div>
+                                    <input type="text"
+                                        class="form-control bg-dark text-light border-secondary hover-border-primary sim-input"
+                                        placeholder="Origem (Ex: Maringá, PR)" onchange="window.handleStopChange()">
+                                </div>
+
+                                <!-- Destino (Inicial) -->
+                                <div class="d-flex align-items-center mb-2 position-relative stop-row" data-index="1">
+                                    <div class="me-3 bg-dark z-1 d-flex flex-column align-items-center"
+                                        style="width: 24px;">
+                                        <i class="bi bi-geo-alt-fill text-danger" style="font-size: 14px;"></i>
+                                    </div>
+                                    <input type="text"
+                                        class="form-control bg-dark text-light border-secondary hover-border-primary sim-input"
+                                        placeholder="Destino (Ex: Curitiba, PR)" onchange="window.handleStopChange()">
+                                </div>
+                            </div>
+
+                            <button class="btn btn-sm btn-outline-secondary w-100 mt-2 dashed-border"
+                                onclick="window.addStopInput()">
+                                <i class="bi bi-plus-circle me-1"></i> Adicionar Parada
+                            </button>
+                        </div>
+
+                        <button id="btn-simulate-route" class="btn btn-primary w-100 py-3 fw-bold btn-magic mb-4"
+                            onclick="window.runRouteSimulation()">
+                            <i class="bi bi-magic me-2"></i>CALCULAR ROTA E PEDÁGIOS
+                        </button>
+
+                        <hr class="border-secondary my-4">
+
+                        <div class="row g-3 text-center">
+                            <div class="col-6">
+                                <div class="p-3 rounded bg-dark border border-secondary">
+                                    <small class="text-muted d-block mb-1">Distância</small>
+                                    <div id="sim-distance" class="fs-4 fw-bold text-white">-- km</div>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="p-3 rounded bg-dark border border-secondary">
+                                    <small class="text-muted d-block mb-1">Tempo Est.</small>
+                                    <div id="sim-time" class="fs-4 fw-bold text-white">--</div>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div
+                                    class="p-3 rounded bg-warning bg-opacity-10 border border-warning border-opacity-25">
+                                    <small class="text-warning d-block mb-1">Pedágios Ativos</small>
+                                    <div id="sim-toll-count" class="fs-3 fw-bold text-warning">0</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Mapa e Resultados -->
+                <div class="col-lg-8 mb-4">
+                    <div class="card h-100 bg-dark border-secondary shadow-lg overflow-hidden position-relative">
+                        <div id="simulator-map-container" style="height: 100%; min-height: 500px; background: #1a1a1a;">
+                        </div>
+
+                        <!-- Overlay Lista de Pedágios (Draggable/Collapsible visualmente fixo a direita) -->
+                        <div class="position-absolute top-0 end-0 m-3 p-0"
+                            style="z-index: 1000; width: 300px; max-height: calc(100% - 32px);">
+                            <div class="card bg-dark border-secondary shadow-lg h-100"
+                                style="backdrop-filter: blur(10px); background: rgba(33, 37, 41, 0.9) !important;">
+                                <div class="card-header border-secondary bg-transparent py-2">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <span class="small fw-bold text-uppercase"><i
+                                                class="bi bi-list-check me-2"></i>Pedágios</span>
+                                        <span class="badge bg-secondary">Estimativa</span>
+                                    </div>
+                                </div>
+                                <div class="card-body p-0 overflow-auto custom-scrollbar" id="sim-toll-list"
+                                    style="max-height: 400px;">
+                                    <div class="text-center text-muted py-5 small">
+                                        <i class="bi bi-map fs-1 d-block mb-2 opacity-25"></i>
+                                        A rota será exibida aqui
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <style>
+                .sim-toll-item {
+                    padding: 10px 15px;
+                    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+                    transition: background 0.2s;
+                }
+
+                .sim-toll-item:hover {
+                    background: rgba(255, 255, 255, 0.05);
+                }
+
+                .sim-toll-item:last-child {
+                    border-bottom: none;
+                }
+
+                /* Autocomplete Suggestions */
+                .autocomplete-suggestions {
+                    position: absolute;
+                    border: 1px solid var(--dark-border);
+                    border-top: none;
+                    z-index: 9999;
+                    top: 100%;
+                    left: 0;
+                    right: 0;
+                    background: var(--dark-surface);
+                    border-radius: 0 0 8px 8px;
+                    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+                    max-height: 200px;
+                    overflow-y: auto;
+                    font-size: 0.85rem;
+                }
+
+                .autocomplete-suggestion {
+                    padding: 10px 12px;
+                    cursor: pointer;
+                    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+                    color: var(--dark-text-secondary);
+                    display: flex;
+                    align-items: center;
+                    transition: all 0.2s;
+                }
+
+                .autocomplete-suggestion i {
+                    margin-right: 8px;
+                    opacity: 0.5;
+                }
+
+                .autocomplete-suggestion:hover {
+                    background-color: rgba(59, 130, 246, 0.1);
+                    color: var(--dark-text-primary);
+                    padding-left: 18px;
+                    /* Slide effect */
+                }
+
+                .autocomplete-suggestion strong {
+                    color: var(--dark-primary);
+                    font-weight: 600;
+                }
+
+                /* Custom Scrollbar for list */
+                .autocomplete-suggestions::-webkit-scrollbar {
+                    width: 6px;
+                }
+
+                .autocomplete-suggestions::-webkit-scrollbar-thumb {
+                    background: var(--dark-border);
+                    border-radius: 3px;
+                }
+            </style>
+        </div>
+
         <!-- Painel de Aá§áµes em Massa (inicialmente oculto) -->
         <div id="bulk-actions-panel"
             class="card position-fixed bottom-0 start-50 translate-middle-x mb-3 shadow-lg no-print"
@@ -2160,7 +2359,7 @@
         </div>
     </div>
 
-    <script src="js/toll_logic.js"></script>
+
     <script src="js/script.js"></script>
     <script src="js/freight_logic.js"></script>
     <!-- Cloud Manager Modal -->
@@ -2217,6 +2416,8 @@
         </div>
     </div>
 
+
+
     <!-- Save Session Modal -->
     <div class="modal fade" id="saveSessionModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
@@ -2271,6 +2472,70 @@
 
     <script type="module" src="js/init.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- OVERLAY DE CARREGAMENTO ÉPICO -->
+    <div id="epic-loading-overlay"
+        style="display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.85); backdrop-filter: blur(10px); z-index: 9999; flex-direction: column; align-items: center; justify-content: center;">
+        <div class="loader-content text-center">
+
+            <!-- Animação CSS Pura (Radar/Pulse) -->
+            <div class="epic-radar mb-4">
+                <div class="radar-circle"></div>
+                <div class="radar-circle delay-1"></div>
+                <div class="radar-circle delay-2"></div>
+                <i class="bi bi-geo-alt-fill text-primary"
+                    style="font-size: 3rem; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 10;"></i>
+            </div>
+
+            <h2 class="text-white fw-bold mb-2">Calculando Rota Otimizada...</h2>
+            <p class="text-secondary" id="epic-loading-text">Analisando trajetos e pedágios</p>
+        </div>
+    </div>
+
+    <style>
+        .epic-radar {
+            width: 150px;
+            height: 150px;
+            position: relative;
+            margin: 0 auto;
+        }
+
+        .radar-circle {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            height: 100%;
+            border: 2px solid #3b82f6;
+            border-radius: 50%;
+            opacity: 0;
+            animation: radar-pulse 2s infinite ease-out;
+        }
+
+        .delay-1 {
+            animation-delay: 0.6s;
+        }
+
+        .delay-2 {
+            animation-delay: 1.2s;
+        }
+
+        @keyframes radar-pulse {
+            0% {
+                width: 0px;
+                height: 0px;
+                opacity: 0.8;
+                border-width: 4px;
+            }
+
+            100% {
+                width: 200px;
+                height: 200px;
+                opacity: 0;
+                border-width: 0px;
+            }
+        }
+    </style>
 </body>
 
 </html>
